# gh-safe-repo

./: .gitignore  MANUAL_TESTING.md  README.md  config.ini.example  gh-safe-repo  git-filter-file.sh  pyproject.toml
docs/: 2026-02-07_github-safe-repo-defaults.md  2026-02-22_github-repo-automation-implementation-plan.md  2026-02-26_github-repo-settings-api-discovery.md  2026-03-02_advanced-security-settings-research.md  LEARNINGS.md
gh_safe_repo/: README.md  cli.py  config_manager.py  diff.py  github_client.py  security_scanner.py
gh_safe_repo/plugins/: actions.py  base.py  branch_protection.py  repository.py  security.py  tag_protection.py
gh_safe_repo/templates/: SECURITY.md
lib/: config_manager.py  diff.py  errors.py  github_client.py  security_scanner.py
lib/plugins/: branch_protection.py  repository.py  security.py
tests/: README.md  test_cli.py  test_config_manager.py  test_diff.py  test_github_client.py  test_plugins.py  test_security_scanner.py
tools/: Containerfile  README.md  git-filter-file-TESTING.md  git-filter-file.sh  scrub-ai-context-TESTING.md  scrub-ai-context.sh  trufflehog
